# FastAPI

./: items_views.py  main.py  pyproject.toml
users/: crud.py  schemas.py  views.py
